<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20sp"
    android:layout_marginTop="30sp"
    android:layout_marginEnd="30sp">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_and_properties" />

        <EditText
            android:id="@+id/homeValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:digits="0123456789"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:maxLength="8"
            android:selectAllOnFocus="true"
            android:text=""
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tax_free_savings" />

        <EditText
            android:id="@+id/taxFreeSavings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:digits="0123456789"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:maxLength="6"
            android:selectAllOnFocus="true"
            android:text=""
            android:textSize="14sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registered_savings" />

        <EditText
            android:id="@+id/registeredSavings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:digits="0123456789"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:maxLength="6"
            android:selectAllOnFocus="true"
            android:text=""
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicles" />

        <EditText
            android:id="@+id/vehicles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:digits="0123456789"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:maxLength="6"
            android:selectAllOnFocus="true"
            android:text=""
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other" />

        <EditText
            android:id="@+id/other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:digits="0123456789"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:maxLength="6"
            android:selectAllOnFocus="true"
            android:text=""
            android:textSize="14sp" />

    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>